[gd_scene load_steps=5 format=3 uid="uid://ckj47uc8jjdi"]

[ext_resource type="Script" path="res://entities/loop_summon.gd" id="1_31btt"]
[ext_resource type="Texture2D" uid="uid://f7sfqovu2mt1" path="res://art/seagull/seagull_12.png" id="1_c8nyl"]

[sub_resource type="Animation" id="Animation_ysj8d"]
resource_name = "new_animation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 0.529412, 0.862745), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xirha"]
_data = {
"fade_out": SubResource("Animation_ysj8d")
}

[node name="LoopSummon" type="Area2D"]
script = ExtResource("1_31btt")
metadata/_edit_group_ = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color(1, 1, 1, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Polygon2D"]
libraries = {
"": SubResource("AnimationLibrary_xirha")
}
autoplay = "fade_out"

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("1_c8nyl")

[node name="RemovalTimer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="RemovalTimer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="RemovalTimer" to="." method="_on_removal_timer_timeout"]
